
5.52  2014-10-18

5.51  2014-10-17
  - Fixed bug in Mojolicious::Validator::Validation where every_param would
    sometimes return an array reference containing an undef value.
  - Fixed Mojo::ByteStream and Mojo::Collection to always return true in
    boolean context.

5.50  2014-10-15
  - Improved Mojo::DOM::HTML performance slightly.
  - Fixed description list parsing bug in Mojo::DOM::HTML. (Trelane)

5.49  2014-10-10
  - Improved form content generator to allow custom content types.
  - Improved Mojo::Server to load applications consistently for all servers.
    (tianon, sri)
  - Fixed Mojolicious::Static to hide files without extensions in DATA
    sections.
  - Fixed inflate command to ignore files without extensions.
  - Fixed bug in Mojolicious::Routes::Route where formats could be rendered
    twice for embedded applications.

5.48  2014-10-07
  - Emergency release for a serious security issue that can result in
    parameter injection attacks, everybody should update!
    Breaking change: Methods that previously worked differently in scalar than
    in list context now always assume scalar context, and new methods have
    been added to cover the list context functionality.
  - Added every_cookie and every_upload methods to Mojo::Message.
  - Added every_param method to Mojo::Message::Request.
  - Added every_param method to Mojo::Parameters.
  - Added every_cookie, every_param and every_signed_cookie methods to
    Mojolicious::Controller.
  - Added every_param method to Mojolicious::Validator::Validation.
  - Added from_json and to_json functions to Mojo::JSON.
  - Improved pluck method in Mojo::Collection to be able to extract values
    from hash references.

5.47  2014-09-28
  - Improved url_for performance.

5.46  2014-09-26
  - PAUSE lost the previous release.

5.45  2014-09-26
  - Deprecated Mojolicious::Routes::Route::has_conditions.
  - Added extracting attribute to Mojo::UserAgent::CookieJar.