@@ -1,5 +1,6 @@
 
 5.52  2014-10-18
+  - Fixed read-only file system compatibility of Mojo::Asset::File.
 
 5.51  2014-10-17
   - Fixed bug in Mojolicious::Validator::Validation where every_param would
